# SonicTrace

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  setup_ffmpeg.py  setup_models.py  test_audio_loading.py  test_auth.py  test_emotion.py  test_overlap.py  test_pipeline.py  test_speaker_diarization.py  test_transcription.py  test_vad.py
core/: __init__.py  audio_processor.py  emotion_recognizer.py  overlap_detector.py  speaker_clustering.py  speaker_embeddings.py  transcriber.py  vad_processor.py
data/results/: test_dialogue_sonictrace.json  test_dialogue_sonictrace.srt  test_dialogue_sonictrace.txt
utils/: audio_loader.py  audio_preprocessor.py  ffmpeg_handler.py  model_manager.py
